app/compute_app.tf
data "google_compute_image" "debian" {
  family  = "debian-12"
  project = "debian-cloud"
}

data "terraform_remote_state" "jenkins" {
  backend = "gcs"
  config = {
    bucket = "tlav-bucket"
    prefix = "terraform/jenkins/state"  
  }
}

resource "google_compute_instance" "app" {
  name         = var.app_instance_name
  machine_type = var.app_machine_type
  zone         = var.zone

  boot_disk {
    initialize_params {
      image = data.google_compute_image.debian.self_link
      size  = 20
    }
  }

  network_interface {
    network    = data.google_compute_network.vpc.id
    subnetwork = data.google_compute_subnetwork.subnet.id

    access_config {
      nat_ip = data.terraform_remote_state.jenkins.outputs.app_static_ip
    }
  }

  metadata = {
    ssh-keys = "tlavric:${var.vm_ssh_public_key}"
  }


  tags = ["http-server", "petclinic-app"]
}

resource "google_compute_instance_group" "app_ig" {
  name = "${var.app_instance_name}-ig"
  zone = var.zone

  instances = [
    google_compute_instance.app.self_link
  ]

  named_port {
    name = "http"
    port = 8080
  }
}

output "app_vm_internal_ip" {
  value = google_compute_instance.app.network_interface[0].network_ip
}
